<?xml version="1.0"?>
<package>
  <name>franka_gripper</name>
  <version>0.0.0</version>
  <description>This package implements the franka_gripepr of Franka Emika for the use via service calls</description>
  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <author>FRANKA EMIKA Research Interface Team</author>

  <license>NONE</license>

  <url type="website">http://wiki.ros.org/franka_hw</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>Franka</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <run_depend>Franka</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xmlrpcpp</run_depend>

</package>
