<?xml version="1.0"?>
<package format="2">
  <name>franka_gripper</name>
  <version>0.0.1</version>
  <description>This package implements the franka gripper of Franka Emika for the use via service calls</description>
  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <author>FRANKA EMIKA Research Interface Team</author>

  <license>NONE</license>

  <url type="website">http://wiki.ros.org/franka_hw</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>Franka</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>xmlrpcpp</depend>
  <depend>actionlib_msgs</depend>
    
  <exec_depend>message_runtime</exec_depend>
  
</package>
