<?xml version="1.0"?>
<package format="2">
  <name>franka_hw</name>
  <version>0.0.1</version>
  <description>franka_hw provides hardware interfaces for using FRANKA EMIKA research robots with ros_control</description>
  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <license>NONE</license>

  <url type="website">http://wiki.ros.org/franka_hw</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>FRANKA EMIKA Research Interface Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>Franka</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>roscpp</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
</package>
