<?xml version="1.0"?>
<package format="2">
  <name>franka_msgs</name>
  <version>0.0.1</version>
  <description>franka_msgs provides messages specific to FRANKA EMIKA research robots</description>
  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <license>NONE</license>

  <url type="website">http://wiki.ros.org/franka_msgs</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>FRANKA EMIKA Research Interface Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
