<?xml version="1.0"?>
<package format="2">
  <name>franka_visualization</name>
  <version>0.0.0</version>
  <description>This package contains visualization tools for FRANKA EMIKA.</description>

  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <author>FRANKA EMIKA Research Interface Team</author>

  <license>NONE</license>
  <url type="website">http://wiki.ros.org/franka_visualization</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>Franka</depend>
</package>
