<?xml version="1.0"?>
<package format="2">
  <name>franka_visualization</name>
  <version>0.0.1</version>
  <description>This package contains visualization tools for Franka Emika.</description>
  <maintainer email="info@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://wiki.ros.org/franka_visualization</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>Franka</depend>
  
  <exec_depend>xacro</exec_depend>
</package>
