<?xml version="1.0"?>
<package>
  <name>test_franka_hw</name>
  <version>0.0.0</version>
  <description>The test_franka_hw package</description>

  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <author>FRANKA EMIKA Research Interface Team</author>

  <license>NONE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <run_depend>franka_description</run_depend>
  <run_depend>franka_hw</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>xmlrpcpp</run_depend>

  <export>
    <controller_interface plugin="${prefix}/test_franka_hw_plugins.xml"/>
  </export>
</package>
